[gd_scene load_steps=4 format=3 uid="uid://bn0apheil0h7c"]

[ext_resource type="FontFile" uid="uid://dxfgiwlnimbpr" path="res://Scenes/UI/RubikMonoOne-Regular.ttf" id="1_npkof"]
[ext_resource type="Script" path="res://Scripts/title_scene.gd" id="1_tk34s"]
[ext_resource type="Theme" uid="uid://c3p6v6ekdbi8q" path="res://Scenes/UI/ui_theme.tres" id="2_68e4e"]

[node name="Title Scene" type="Node3D" node_paths=PackedStringArray("canvas")]
script = ExtResource("1_tk34s")
canvas = NodePath("CanvasLayer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 80

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 100)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("1_npkof")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center]Space Ltd"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1.475, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play Button" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 45)
layout_mode = 2
theme = ExtResource("2_68e4e")
theme_override_font_sizes/font_size = 24
text = "PLAY"

[node name="Settings Button" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 45)
layout_mode = 2
theme = ExtResource("2_68e4e")
theme_override_font_sizes/font_size = 24
text = "Settings
"

[node name="Instructions" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 45)
layout_mode = 2
theme = ExtResource("2_68e4e")
theme_override_font_sizes/font_size = 24
text = "Instructions
"

[node name="Exit Button" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 45)
layout_mode = 2
theme = ExtResource("2_68e4e")
theme_override_font_sizes/font_size = 24
text = "Exit
"

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Exit Button" to="." method="_on_exit_button_pressed"]
